@@ -2,26 +2,22 @@ package org.curieo.embed;
 
 import java.util.function.Function;
 import lombok.Generated;
-import lombok.Value;
 import org.apache.commons.collections4.CollectionUtils;
 import org.curieo.model.StandardRecord;
 import org.curieo.model.StandardRecordWithEmbeddings;
 
 @Generated
-@Value
-public class SentenceEmbeddingService
+public record SentenceEmbeddingService(EmbeddingService embeddingsService)
     implements Function<StandardRecord, StandardRecordWithEmbeddings> {
-  EmbeddingService embeddingsService;
-
   @Override
   public StandardRecordWithEmbeddings apply(StandardRecord sr) {
     StringBuilder text = new StringBuilder();
     if (!CollectionUtils.isEmpty(sr.getTitles())) {
-      text.append(sr.getTitles().get(0).getString());
+      text.append(sr.getTitles().getFirst().getString());
     }
     if (!CollectionUtils.isEmpty(sr.getAbstractText())) {
       text.append(' ');
-      text.append(sr.getAbstractText().get(0).getString());
+      text.append(sr.getAbstractText().getFirst().getString());
     }
     return StandardRecordWithEmbeddings.copy(sr, embeddingsService.embed(text.toString()));
   }
